--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 
 <h1>Teachable Machine Image Tester</h1>
+<h3>Upload an image of Rice / Noodle / Fish & Chips!</h3>
+<p>Accuracy range: 0.00 - 1.00</p>
+
+<br><br>
 
 <button onclick="init()">Load Model</button>
 
